torquelogger.yaml
apiVersion: v1
kind: Service
metadata:
  name: torqueloggerdynamodb
  labels:
    app: torqueloggerdynamodb
    service: torqueloggerdynamodb
spec:
  ports:
  - port: 4000
    name: http
  selector:
    app: torqueloggerdynamodb
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: torqueloggerdynamodb-v1
  labels:
    app: torqueloggerdynamodb
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: torqueloggerdynamodb
      version: v1
  template:
    metadata:
      labels:
        app: torqueloggerdynamodb
        version: v1
    spec:
      serviceAccountName: torqueloggerdynamodb
      containers:
      - name: torqueloggerdynamodb
        image: deepakdpk6/torqueloggerdynamodb:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 4000
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 200m
