torqueLoggerIstio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: common-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: torquelogger
spec:
  hosts:
  - "*"
  gateways:
  - common-gateway
  http:
  - match:
    - uri:
        prefix: /logs
    route:
    - destination:
        host: torquelogger
        port:
          number: 4000
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: torquelogger
spec:
  host: torquelogger
  subsets:
  - name: v1
    labels:
      version: v1
